--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -28,8 +28,7 @@ jobs:
 
         steps:
             - name: downcase IMAGE_NAME
-              run: |
-                  echo "IMAGE_NAME=${IMAGE_NAME,,}" >>${GITHUB_ENV}
+              run: echo "IMAGE_NAME=${IMAGE_NAME,,}" >>${GITHUB_ENV}
 
             - name: Checkout repository
               uses: actions/checkout@v2
@@ -101,6 +100,5 @@ jobs:
             - name: Push Image to multiple registries
               uses: akhilerm/tag-push-action@v2.0.0
               with:
-                  src: ghcr.io/{{ env.IMAGE_NAME }}:latest
-                  dst: |
-                      docker.io/{{ env.IMAGE_NAME }}:latest
+                  src: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:latest
+                  dst: docker.io/${{ env.IMAGE_NAME }}:latest
