--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -104,9 +104,7 @@ jobs:
           dst: docker.io/${{ env.IMAGE_NAME }}:latest
 
       - name: Sync README
-        uses: ms-jpq/sync-dockerhub-readme@v1
+      - uses: meeDamian/sync-readme@v1.0.6
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
-          repository: ${{ env.IMAGE_NAME }}
-          readme: "./README.md"
+          pass: ${{ secrets.DOCKERHUB_TOKEN }}
+          description: https://github.com/USED255/sept
