--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -106,5 +106,5 @@ jobs:
       - name: Sync README
         uses: meeDamian/sync-readme@v1.0.6
         with:
-          pass: ${{ secrets.DOCKERHUB_TOKEN }}
+          pass: ${{ secrets.DOCKER_PASS }}
           description: https://github.com/USED255/sept
